# c-cmake-starter

./: CMakeLists.txt  README.md
src/: core.c  core.h  main.c
